# example-module

./: .gitattributes  .gitignore  README.md
.gitlab/merge_request_templates/: default.md
docs/: macos-x64-xcode-manual-config.md  macos-x64-xcode.md  windows-x64-vs2017-manual-config.md  windows-x64-vs2017.md
scripts/: apt_get_dependencies.sh  brew_dependencies.sh  build.bat.in  build.sh.in  configure_dependency_rpath.bash  dependencies.csv  fetch_dependencies.cmd  make_install.bat.in  make_install.sh.in  make_install_debug.bat.in  make_install_debug.sh.in  reconfig.bat.in  reconfig.sh.in  run_tests.bat.in  run_tests.sh.in
scripts/example-module-dep/: CMakeLists.txt
src/: CMakeLists.txt  LICENSE
src/cmake/: qt.conf.in
src/cmake/modules/: OrgCMakeUtilities.cmake  configure_dependency_rpath.bash
src/dependencies/: CMakeLists.txt
src/dependencies/googletest/: CMakeLists.txt
src/docs/: CMakeLists.txt
src/example-module/: CMakeLists.txt
src/example-module/include/example-module/: Version.h  example-module.h
src/example-module/src/: Version.cxx.in  example-module.cpp
src/example-module/src/tests/: VersionTest.cxx.in  example-moduleTest.cpp
src/example-module_tests_app/: CMakeLists.txt
src/example-module_tests_app/src/: example-module_tests.cpp
